--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ pkg_check_modules(GLIB2 glib-2.0>=2.26 REQUIRED)
 
 set(KERNELS "edel_kernel_secondder.cl")
 set(BINARIES "" )
-set(DEPS  "-lOpenCL")
-
+set(DEPS  "-lOpenCL -std=c99")
 
 include_directories(${GLIB2_INCLUDE_DIRS})
 list(APPEND DEPS ${GLIB2_LIBRARIES})
